[gd_scene load_steps=7 format=3 uid="uid://ctuv4kv4pm255"]

[ext_resource type="Script" path="res://scenes/SlotMachine.gd" id="1"]
[ext_resource type="FontFile" uid="uid://bqir2kw1vqe8u" path="res://fonts/Symtext.ttf" id="2"]
[ext_resource type="Script" path="res://scenes/Main.gd" id="3"]

[sub_resource type="Gradient" id="1"]

[sub_resource type="GradientTexture2D" id="2"]
gradient = SubResource("1")
width = 1920

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="root" type="Node2D"]
script = ExtResource("3")

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.639216, 0.25098, 0.239216, 1)
light_mask = 257
position = Vector2(-182, -140)
scale = Vector2(1.09479, 1082.09)
texture = SubResource("2")
centered = false

[node name="RollButton" type="Button" parent="."]
offset_left = 1342.0
offset_top = 849.0
offset_right = 1783.0
offset_bottom = 964.0
theme_override_fonts/font = SubResource("3")
text = "Roll"

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_direction = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 217.0
offset_top = 70.0
offset_right = 1217.0
offset_bottom = 870.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.09695, 1.10693)
pivot_offset = Vector2(480.425, 390.268)
size_flags_stretch_ratio = 10.68

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
positional_shadow_atlas_size = 3200
size = Vector2i(1000, 850)
render_target_update_mode = 4

[node name="SlotMachine" type="Node2D" parent="SubViewportContainer/SubViewport"]
script = ExtResource("1")

[node name="Reel1" type="Label" parent="SubViewportContainer/SubViewport/SlotMachine"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Reel2" type="Label" parent="SubViewportContainer/SubViewport/SlotMachine"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Reel3" type="Label" parent="SubViewportContainer/SubViewport/SlotMachine"]
offset_right = 40.0
offset_bottom = 23.0

[node name="ResultLabel" type="Label" parent="SubViewportContainer/SubViewport/SlotMachine"]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="button_down" from="RollButton" to="." method="_on_Roll_button_down"]
